# script

./: .clang-format  .gitignore  CMakeLists.txt  INTERVIEW.md  README.md
.github/workflows/: ci.yml
examples/: echoMultipleArgs.script  function.script  helloWorld.script  nestedFor.script
src/: command.cpp  command.h  commandCallback.h  command_impl.h  echo.cpp  main.cpp  parser.cpp  parser.h  script.cpp  script.h  scriptInstance.cpp  scriptInstance.h  wait.cpp  wait.h
src/commands/: command  comments.cpp  echo.cpp  echo.h  end_for.cpp  endl.cpp  for.cpp  mul.cpp  ret.cpp  scope.cpp  sum.cpp  var.cpp  wait.cpp
src/types/: commandCallback.h  contextFrame.h  source.h  stringMap.h
src/utils/: findMatch.h  no_op.h  split.h
tests/: RunScriptOutputTest.cmake
tests/expected/: helloWorld.txt
tests/scripts/: comments.script  comments_scope.script  endl.script  for_dec.script  for_inc.script  mul.script  ret.script  sum.script  var.script  wait.script
